<?xml version="1.0"?>
<package format="3">
  <name>tsdf_localization</name>
  <version>2.0.0</version>
  <description>The tsdf_localization package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="meisoldt@uos.de">Marc Eisoldt</maintainer>
  <maintainer email="amock@uos.de">Alexander Mock</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD-3</license>
  <!-- <url type="website">http://wiki.ros.org/mcl</url> -->

  <author email="meisolt@uos.de">Marc Eisoldt</author>
  <author email="amock@uos.de">Alexander Mock</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <build_type>ament_cmake</build_type>
  </export>
</package>
